fixed numbers spacing in font section & updated copy

--- a/app/stylesheets/pages/home.scss
+++ b/app/stylesheets/pages/home.scss
@@ -181,6 +181,10 @@ h2 {
   display: inline-block;
 }
 
+.numbers-spaced {
+  letter-spacing: -.125em;
+}
+
 .aveda-logo {
   max-height: 70px;
   width: auto;
